--- a/Workout/app/src/main/res/layout/fragment_workout_detail.xml
+++ b/Workout/app/src/main/res/layout/fragment_workout_detail.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WorkoutDetailFragment"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/textTitle"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/textDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <FrameLayout
+        android:id="@+id/stopwatch_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
