--- a/Bits and Pizzas/app/src/main/res/layout/activity_order.xml
+++ b/Bits and Pizzas/app/src/main/res/layout/activity_order.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrderActivity"
+    tools:context=".activities.OrderActivity"
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
@@ -28,7 +28,7 @@
                 app:layout_collapseMode="parallax"/>
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/toolbar_order"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"/>
