--- a/Bits and Pizzas/app/src/main/res/layout/fragment_top.xml
+++ b/Bits and Pizzas/app/src/main/res/layout/fragment_top.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView
+    android:id="@+id/home_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".TopFragment">
+    tools:context=".items.top.TopFragment">
 
     <FrameLayout
         android:layout_width="match_parent"
