--- a/CinemaReview/app/src/main/res/layout/item_view_pager_movie_view.xml
+++ b/CinemaReview/app/src/main/res/layout/item_view_pager_movie_view.xml
@@ -10,6 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <View
+        android:id="@+id/divider5"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/degradado" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
