--- a/CinemaReview/app/src/main/res/values/styles.xml
+++ b/CinemaReview/app/src/main/res/values/styles.xml
@@ -10,6 +10,12 @@
         <item name="android:windowBackground">@android:color/white</item>
     </style>
 
+
+    <style name="SplashScreen" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:windowBackground">@drawable/splashscreen</item>
+    </style>
+
+
     <style name="AppTheme.Slide">
         <item name="android:windowEnterAnimation">@anim/slide_up</item>
         <item name="android:windowExitAnimation">@anim/slide_down</item>
