--- a/CinemaReview/app/src/main/res/layout/fragment_account_view.xml
+++ b/CinemaReview/app/src/main/res/layout/fragment_account_view.xml
@@ -1,14 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.AccountViewFragment">
+    android:paddingHorizontal="20sp"
+    android:paddingTop="40sp"
+    android:paddingBottom="20sp"
+    android:orientation="vertical"
+    android:background="@color/colorPrimaryDark">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:textColor="@color/colorText_3"
+        android:text="Nombre de usuario: "
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"/>
 
-</FrameLayout>
+    <TextView
+        android:textColor="@color/colorText_1"
+        android:paddingBottom="20sp"
+        android:id="@+id/account_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
+
+    <TextView
+        android:textColor="@color/colorText_3"
+        android:paddingTop="20sp"
+        android:text="Correo electronico: "
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:textColor="@color/colorText_1"
+        android:paddingBottom="20sp"
+        android:id="@+id/account_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_logout"
+        android:layout_marginTop="20sp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:backgroundTint="@color/colorAccent"
+        android:textColor="@color/colorText_1"
+        android:textStyle="bold"
+        android:text="Cerrar session"
+        tools:ignore="HardcodedText" />
+
+</LinearLayout>
