--- a/CinemaReview/app/src/main/res/menu/menu_delete_review.xml
+++ b/CinemaReview/app/src/main/res/menu/menu_delete_review.xml
@@ -2,7 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_save"
-        android:title="save"
+        android:id="@+id/delete_movie_review"
+        android:icon="@drawable/ic_baseline_delete_forever_24"
+        android:title="delete"
         app:showAsAction="ifRoom" />
 </menu>
