--- a/CinemaReview/app/src/main/res/layout/fragment_history_item_movie.xml
+++ b/CinemaReview/app/src/main/res/layout/fragment_history_item_movie.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="15sp">
@@ -10,12 +11,14 @@
         android:src="@drawable/ic_launcher_background"
         android:id="@+id/history_movie_banner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        tools:ignore="ContentDescription" />
 
     <ImageView
         android:src="@drawable/degradado2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        tools:ignore="ContentDescription" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +29,8 @@
             android:id="@+id/history_movie_cover"
             android:src="@drawable/ic_launcher_background"
             android:layout_width="110dp"
-            android:layout_height="160dp"/>
+            android:layout_height="160dp"
+            tools:ignore="ContentDescription" />
 
         <LinearLayout
             android:layout_gravity="center"
@@ -37,7 +41,6 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:text="Titulo de pelicula"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:id="@+id/history_movie_name"
@@ -46,23 +49,19 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
                 <TextView
-                    android:text="Director: "
+                    android:text="@string/movie_description_item_director"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
-
                 <TextView
-                    android:text="Pepe Jons"
                     android:id="@+id/history_movie_director"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
-
             </LinearLayout>
 
             <TextView
-                android:text="Categorias de las peliculas"
                 android:id="@+id/history_movie_categories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
@@ -72,18 +71,18 @@
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    tools:ignore="UseCompoundDrawables">
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_star_24"/>
+                        android:src="@drawable/ic_baseline_star_24"
+                        tools:ignore="ContentDescription" />
                     <TextView
-                        android:text="stars"
                         android:textStyle="bold"
                         android:paddingHorizontal="5sp"
                         android:id="@+id/history_movie_stars"
@@ -94,14 +93,15 @@
                 <LinearLayout
                     android:gravity="center"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    tools:ignore="UseCompoundDrawables">
                     <ImageView
                         android:layout_marginStart="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_access_time_24"/>
+                        android:src="@drawable/ic_baseline_access_time_24"
+                        tools:ignore="ContentDescription" />
                     <TextView
-                        android:text="1h 25min"
                         android:textStyle="bold"
                         android:id="@+id/history_movie_duration"
                         android:paddingHorizontal="5sp"
