--- a/CinemaReview/app/src/main/res/layout/fragment_history_view.xml
+++ b/CinemaReview/app/src/main/res/layout/fragment_history_view.xml
@@ -23,7 +23,7 @@
         android:textSize="20sp"
         android:layout_marginTop="40sp"
         android:textAlignment="center"
-        android:text="Sin historial"
+        android:text="@string/history_view_empty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
