--- a/CinemaReview/app/src/main/res/menu/menu_delete_review.xml
+++ b/CinemaReview/app/src/main/res/menu/menu_delete_review.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/delete_movie_review"
         android:icon="@drawable/ic_baseline_delete_forever_24"
-        android:title="delete"
+        android:title="@string/menu_review_delete"
         app:showAsAction="ifRoom" />
 </menu>
