--- a/CinemaReview/app/src/main/res/layout/fragment_search_view.xml
+++ b/CinemaReview/app/src/main/res/layout/fragment_search_view.xml
@@ -4,52 +4,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".views.SearchViewFragment"
-    android:padding="20dp"
     android:orientation="vertical">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="15dp"
         tools:ignore="UselessParent">
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:boxStrokeColor="@color/colorText_2"
-            app:boxCornerRadiusBottomEnd="100sp"
-            app:boxCornerRadiusTopEnd="100sp"
-            app:boxCornerRadiusBottomStart="100sp"
-            app:boxCornerRadiusTopStart="100sp"
             app:boxBackgroundColor="@color/colorText_2"
             app:endIconMode="clear_text"
+            android:layout_margin="15dp"
+            app:placeholderText="@string/search_label_input"
+            app:startIconDrawable="@drawable/ic_baseline_search_24"
             app:endIconTint="@color/colorPrimary"
             app:endIconDrawable="@drawable/ic_baseline_clear_24"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-            <com.google.android.material.textfield.TextInputEditText android:textColor="@color/colorPrimary"
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/search_title_movie"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorText_2"
+                android:inputType="text"
+                android:singleLine="true"
+                android:textColor="@color/colorPrimary" />
 
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
 
     <androidx.core.widget.NestedScrollView
-        android:padding="15dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-        <TextView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_movie_result"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:text="@string/search_results_empty"/>
+            android:layout_height="wrap_content"/>
     </androidx.core.widget.NestedScrollView>
 </LinearLayout>
