--- a/CinemaReview/app/src/main/res/layout/fragment_movie_view.xml
+++ b/CinemaReview/app/src/main/res/layout/fragment_movie_view.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".views.MovieViewFragment"
-    android:id="@+id/MovieLayoutParent">
+    tools:context=".views.MovieViewFragment">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager_movie"
