update style login and add readme

--- a/CinemaReview/app/src/main/res/values/styles.xml
+++ b/CinemaReview/app/src/main/res/values/styles.xml
@@ -12,6 +12,9 @@
 
 
     <style name="SplashScreen" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@drawable/splashscreen</item>
     </style>
 
